--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: sans-serif;
 }
 
 header{
@@ -70,6 +71,28 @@ li{
     justify-content: center;
     align-items: center;
 }
+
+.font-12px{
+    font-size: 12px;
+    font-weight: lighter;
+}
+
+.item{
+    font-size: 15px;
+    font-weight: bold;
+}
+
+#price{
+    font-weight: bold;
+    color: red;
+}
+
+#old-price{
+    text-decoration: line-through;
+    color: rgb(105, 105, 105);
+}
+
+
 
 
 
