--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,11 @@
 
 header{
     width: 100%;
-    background-color: orange;
+    background-color: rgb(255,105,0);
     color: white;
-    padding: 15px;
+    padding: 10px;
+    font-size: 12px;
+    font-weight: bold;
 }
 
 .row-header{
@@ -100,5 +102,28 @@ li{
     color: white;
 }
 
+footer{
+    width: 100%;
+    padding: 5px;
+    background-color: rgb(26, 26, 26);
+    color: white;
+    font-size: 12px;
+    border-bottom: 1px solid white;
+}
+
+.footer{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    justify-content: space-between;
+}
+
+h4{
+    padding-bottom: 10px;
+}
+.info{
+    padding-right: 5px;
+}
 
 
