--- a/css/style.css
+++ b/css/style.css
@@ -126,4 +126,28 @@ h4{
     padding-right: 5px;
 }
 
+.overlay{
+    opacity: 0;
+    position: absolute;
+    display: flex;
+    top:0;
+    justify-content: center; 
+    align-items: center;
+}
 
+.col-33:hover .overlay{
+    opacity: 1
+}
+
+.heart{
+    background-color: white;
+    padding: 8px 10px;
+    position: absolute;
+    top: 10px;
+    right: 0px;
+}
+
+.heart:hover{
+    color: red;
+    cursor: pointer;
+}
