--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,8 @@ header{
     padding: 10px;
     font-size: 12px;
     font-weight: bold;
+    position: fixed;
+    z-index: 2;
 }
 
 .row-header{
@@ -35,7 +37,10 @@ li{
     padding: 10px 5px;
 }
 
-/* START OF MAIN */
+main{
+    padding-top: 50px;
+}
+
 .container{
     width: 75%;
     margin: 0 auto;
