--- a/css/style.css
+++ b/css/style.css
@@ -161,9 +161,13 @@ h4{
     right: 0px;
 }
 
-.heart:hover{
+.heart:hover {
     color: red;
     cursor: pointer;
+}
+
+.heart:hover .overlay{
+    opacity: 1
 }
 
 h5{
